feat: Add B4aBadge to app template field

--- a/src/components/B4ALabelTemplate/B4ALabelTemplate.scss
+++ b/src/components/B4ALabelTemplate/B4ALabelTemplate.scss
@@ -38,6 +38,15 @@
       font-size: 12px;
       color: rgba(0, 0, 0, .35);
     }
+
+    .technologies {
+      display: flex;
+      margin-top: 10px;
+
+      * {
+        margin-right: 10px;
+      }
+    }
 }
 
 
