--- a/src/stylesheets/back4app.scss
+++ b/src/stylesheets/back4app.scss
@@ -5,5 +5,7 @@ $green: #4CAF50;
 $lightYellow: #f5e023;
 $darkYellow: #f78400;
 $light-gray: #dfdfdf;
+$iosColor: #000000;
+$androidColor: #A4C639;
 // Back4App sizes
 $header-height: 51px;
