fix: Error status font color

--- a/src/dashboard/IndexManager/IndexManager.scss
+++ b/src/dashboard/IndexManager/IndexManager.scss
@@ -81,7 +81,7 @@
           color: #FFC107;
         }
 
-        .index-Status-error {
+        .indexStatus-error {
           color: #D0021B;
         }
 
