--- a/src/components/Label/Label.scss
+++ b/src/components/Label/Label.scss
@@ -13,10 +13,17 @@
 
 .text {
   font-weight: 700;
+  display: flex;
+  align-items: center;
 }
 
 .description {
   margin-top: 2px;
   color: $secondaryTextColor;
   line-height: 13px;
+}
+
+.help {
+  margin-left: 6px;
+  line-height: 0;
 }
