style: Index manager name header when read only

--- a/src/dashboard/IndexManager/IndexManager.scss
+++ b/src/dashboard/IndexManager/IndexManager.scss
@@ -63,6 +63,7 @@
 
           &:first-of-type {
             width: 50px;
+            padding-left: 10px;
           }
 
           &:nth-child(2) {
