fix: Remove GraphQL playground animation

--- a/src/dashboard/Data/ApiConsole/ApiConsole.scss
+++ b/src/dashboard/Data/ApiConsole/ApiConsole.scss
@@ -27,6 +27,12 @@
   padding-top: 48px;
 }
 
+.playgroundContainer > div > div {
+  opacity: 1;
+  transform: unset;
+  animation: unset;
+}
+
 .empty {
   position: absolute;
   top: 96px;
