fix: Style fixes

--- a/src/components/B4AAlert/B4AAlert.scss
+++ b/src/components/B4AAlert/B4AAlert.scss
@@ -36,5 +36,13 @@
   font-weight: bold;
 }
 
+.description {
+  a {
+    color: #169cee;
+    text-decoration: none;
+  }
 
-
+  p {
+    padding: 0 20px;
+  }
+}
