--- a/src/stylesheets/back4app.scss
+++ b/src/stylesheets/back4app.scss
@@ -9,3 +9,4 @@ $iosColor: #000000;
 $androidColor: #A4C639;
 // Back4App sizes
 $header-height: 51px;
+$content-max-height: calc(100vh - #{$header-height})
