--- a/src/components/FourOhFour/FourOhFour.scss
+++ b/src/components/FourOhFour/FourOhFour.scss
@@ -5,10 +5,11 @@
  * This source code is licensed under the license found in the LICENSE file in
  * the root directory of this source tree.
  */
+@import 'stylesheets/back4app.scss';
 @import 'stylesheets/globals.scss';
 
 .fourOhFour {
-  height: 100vh;
+  height: $content-max-height;
   background: #06283d;
   color: white;
   text-align: center;
