--- a/src/dashboard/Analytics/Explorer/Explorer.scss
+++ b/src/dashboard/Analytics/Explorer/Explorer.scss
@@ -5,11 +5,12 @@
  * This source code is licensed under the license found in the LICENSE file in
  * the root directory of this source tree.
  */
+@import 'stylesheets/back4app.scss';
 @import 'stylesheets/globals.scss';
 
 .content {
   padding: 96px 0px 0px 0px;
-  min-height: 100vh;
+  min-height: $content-max-height;
   position: relative;
 }
 
