--- a/src/dashboard/Dashboard.scss
+++ b/src/dashboard/Dashboard.scss
@@ -5,9 +5,13 @@
  * This source code is licensed under the license found in the LICENSE file in
  * the root directory of this source tree.
  */
+@import 'stylesheets/back4app.scss';
+
 .content {
   margin-left: 300px;
-  margin-top: 51px;
+  margin-top: $header-height;
+  max-height: $content-max-height;
+  overflow: auto;
 }
 
 body:global(.expanded) {
