--- a/src/dashboard/Data/CloudCode/CloudCode.scss
+++ b/src/dashboard/Data/CloudCode/CloudCode.scss
@@ -5,24 +5,16 @@
  * This source code is licensed under the license found in the LICENSE file in
  * the root directory of this source tree.
  */
+@import 'stylesheets/back4app.scss';
 @import 'stylesheets/globals.scss';
-@import 'stylesheets/bootstrap-custom.scss';
 @import "B4ACloudCode";
 
 .source {
   position: relative;
-  min-height: 100vh;
+  min-height: $content-max-height;
 }
 
 .content {
   padding: 96px 0px 0px 0px;
-  min-height: 100vh;
-}
-
-.empty {
-  position: absolute;
-  top: 96px;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  min-height: $content-max-height;
 }
