--- a/src/dashboard/ServerSettings/ServerSettings.scss
+++ b/src/dashboard/ServerSettings/ServerSettings.scss
@@ -6,15 +6,16 @@
  * the root directory of this source tree.
  *
  */
+@import 'stylesheets/back4app.scss';
 @import 'stylesheets/globals.scss';
 
 .content {
-  min-height: 100vh;
+  min-height: $content-max-height;
   margin-top: 42px;
 }
 
 .iframeContent {
-  min-height: 100vh;
+  min-height: $content-max-height;
   width: 100%;
 
   iframe {
