--- a/src/dashboard/B4aAppTemplates/B4aAppTemplates.scss
+++ b/src/dashboard/B4aAppTemplates/B4aAppTemplates.scss
@@ -1,13 +1,15 @@
 @import 'stylesheets/back4app.scss';
 
 .loading {
-  position: relative;
-  min-height: $content-max-height;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(#{$content-max-height} - #{$toolbar-height});
 }
 
 .app-templates {
   background-color: #f9f9f9;
-  min-height: $content-max-height;
-  padding-top: 70px;
-  overflow: hidden;
+  max-height: calc(#{$content-max-height} - #{$toolbar-height});
+  margin-top: $toolbar-height;
+  overflow: auto;
 }
