feat: Sidebar collapse

--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -15,12 +15,11 @@
   background: #353446;
   height: 96px;
   color: white;
-  transition: left 0.5s ease-in;
 }
 
-@media (max-width: 980px) {
+body:global(.expanded) {
   .toolbar {
-    left: 0;
+    left: $sidebarCollapsedWidth;
   }
 }
 
