--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -19,9 +19,9 @@
   z-index: 5;
 }
 
-@media (max-width: 980px) {
+body:global(.expanded) {
   .toolbar {
-    left: 0;
+    left: $sidebarCollapsedWidth;
   }
 }
 
