Changing categories to fill context menu horizontally

--- a/src/components/ContextMenu/ContextMenu.scss
+++ b/src/components/ContextMenu/ContextMenu.scss
@@ -26,6 +26,7 @@
 		display: flex;
 
 		.item {
+			width: 100%;
 			&:after {
 				@include arrow('right', 12px, 8px, rgba(255,255,255,0.3));
 				position: absolute;
