EditRowDialog - picker for pointer and relation

--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -24,6 +24,22 @@
   }
 }
 
+.objectPickerContent {
+  .toolbar {
+    background: #00db7c;
+    height: 80px;
+    right: 135px;
+
+    .nav {
+      display: none;
+    }
+
+    .titleText {
+      display: none;
+    }
+  }
+}
+
 .title {
   position: absolute;
   left: 14px;
