--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -5,7 +5,7 @@
  * This source code is licensed under the license found in the LICENSE file in
  * the root directory of this source tree.
  */
-@import 'stylesheets/globals.scss';
+@import "stylesheets/globals.scss";
 
 .toolbar {
   position: fixed;
@@ -16,6 +16,7 @@
   height: 96px;
   color: white;
   transition: left 0.5s ease-in;
+  z-index: 5;
 }
 
 @media (max-width: 980px) {
