--- a/src/components/Popover/Popover.scss
+++ b/src/components/Popover/Popover.scss
@@ -7,7 +7,7 @@
  */
 @import 'stylesheets/globals.scss';
 
-#popover_wrapper, #fixed_wrapper {
+.popover_wrapper, .fixed_wrapper {
   position: absolute;
   top: 0;
   left: 0;
@@ -26,13 +26,18 @@
   opacity: 1;
 }
 
-#popover_wrapper {
+.popover_wrapper {
   position: absolute;
 }
 
-#fixed_wrapper {
+.fixed_wrapper {
   position: fixed;
 }
+
+.popoverLayer {
+  cursor: pointer;
+}
+
 
 @include keyframes(fade-in) {
   0% {
