handle case when no fields to protect

--- a/src/components/MultiSelect/MultiSelect.scss
+++ b/src/components/MultiSelect/MultiSelect.scss
@@ -60,6 +60,13 @@
   }
 }
 
+.option.disabled {
+  &:hover {
+    background: white;
+    cursor: default;
+  }
+}
+
 .checked,
 .unchecked {
   position: absolute;
