showing arrow icon if cell has follow link value

--- a/src/components/Pill/Pill.scss
+++ b/src/components/Pill/Pill.scss
@@ -9,8 +9,9 @@
 
 .pill {
   @include MonospaceFont;
-  display: inline-block;
-  background: #D5E5F2;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   color: #0E69A1;
   height: 20px;
   line-height: 20px;
@@ -21,7 +22,27 @@
   text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
+  & a {
+    height: 20px;
+    width: 20px;
+    background: #d6e5f2;
+    border-radius: 50%;
+    & svg  {
+      transform: rotate(316deg);
+    }
+  }
+}
 
+.iconAction {
+  cursor: pointer;
+}
+
+.disableIconAction {
+  cursor: initial;
+}
+
+.action {
+  background: #D5E5F2;
   &:hover {
     background: #BFD4E5;
   }
