--- a/src/components/Pill/Pill.scss
+++ b/src/components/Pill/Pill.scss
@@ -22,6 +22,7 @@
   text-align: center;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-bottom: 4px;
   & a {
     height: 20px;
     width: 20px;
