--- a/src/components/DataBrowserHeader/DataBrowserHeader.scss
+++ b/src/components/DataBrowserHeader/DataBrowserHeader.scss
@@ -20,21 +20,15 @@
 }
 
 .name {
-  position: relative;
   color: white;
   font-size: 12px;
   height: 22px;
   line-height: 22px;
-  padding-right: 8px;
+  margin-right: 8px;
   float: left;
   max-width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
-  & span {
-    position: absolute;
-    top: -6px;
-    right: 0;
-  }
 }
 
 .type {
@@ -44,7 +38,6 @@
   line-height: 22px;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-left: 8px;
 }
 
 .ascending {
