--- a/src/components/Field/Field.scss
+++ b/src/components/Field/Field.scss
@@ -42,6 +42,10 @@
   min-height: 80px;
   text-align: right;
   padding: 0;
+  background: #f6fafb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .input {
