added margin in new pill design

--- a/src/components/Pill/Pill.scss
+++ b/src/components/Pill/Pill.scss
@@ -27,6 +27,7 @@
     width: 20px;
     background: #d6e5f2;
     border-radius: 50%;
+    margin-left: 5px;
     & svg  {
       transform: rotate(316deg);
     }
