--- a/src/components/Field/Field.scss
+++ b/src/components/Field/Field.scss
@@ -49,7 +49,7 @@
 }
 
 .input {
-  margin: 25px 20px 0 0;
+  // margin: 25px 20px 0 0;
 }
 
 .header {
@@ -61,7 +61,7 @@
   }
 
   .input {
-    margin: 13px 20px 0 0;
+    // margin: 13px 20px 0 0;
   }
 
   & ~ .field {
