--- a/src/components/BrowserCell/BrowserCell.scss
+++ b/src/components/BrowserCell/BrowserCell.scss
@@ -12,7 +12,7 @@
   cursor: default;
   color: #0E69A1;
   height: 30px;
-  line-height: 22px;
+  // line-height: 22px;
   padding: 5px 4px 0;
   border-right: 1px solid #e3e3ea;
 }
