Cell lineheight fix

--- a/src/components/Pill/Pill.scss
+++ b/src/components/Pill/Pill.scss
@@ -11,10 +11,10 @@
   @include MonospaceFont;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  // align-items: center;
   color: #0E69A1;
-  height: 18px;
-  line-height: 20px;
+  // height: 20px;
+  line-height: 18px;
   border-radius: 10px;
   font-size: 11px;
   width: 100%;
