--- a/src/components/Pill/Pill.scss
+++ b/src/components/Pill/Pill.scss
@@ -18,11 +18,12 @@
   border-radius: 10px;
   font-size: 11px;
   width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  // overflow: hidden;
+  // text-overflow: ellipsis;
   white-space: nowrap;
   margin-bottom: 4px;
   & a {
+    margin-top: -1.5px;
     height: 20px;
     width: 20px;
     background: #d6e5f2;
