--- a/src/components/BrowserCell/BrowserCell.scss
+++ b/src/components/BrowserCell/BrowserCell.scss
@@ -12,8 +12,8 @@
   cursor: default;
   color: #0E69A1;
   height: 30px;
-  line-height: 22px;
-  padding: 5px 4px 0;
+  line-height: 20px;
+  padding: 5px;
   border-right: 1px solid #e3e3ea;
 }
 
