fixed pin icon padding

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -405,9 +405,9 @@ a.subitem {
 
   svg {
     cursor: pointer;
-    padding: 14px 0;
-    height: 48px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
+    padding: 10px 10px 10px 10px;
     fill: #132B39;
 
     &:hover {
