fix: show text ellipse for shrinkable pill

--- a/src/components/Pill/Pill.scss
+++ b/src/components/Pill/Pill.scss
@@ -32,6 +32,14 @@
       transform: rotate(316deg);
     }
   }
+  & .pillText {
+    position: absolute;
+    left: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 75%;
+  }
 }
 
 .content {
